fix: reorder steps in workflow for clarity

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,13 @@
 name: My first workflow
 
-on: push
+on: push #trigger
 
 jobs:
   first_job:
     runs-on: ubuntu-latest
     steps:
+    - name: checkout the repo
+      uses: actions/checkout@v4.3.1
     - name: welcome message
       run: echo "My Message from GH Actions"
     
