--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,20 @@ jobs:
       uses: actions/checkout@v4.3.1
     - name: welcome message
       run: echo "My Message from GH Actions"
-    
-    - name: List files
-      run: ls 
-
+    - name: Upload package.json
+      uses: actions@upload-artifact@v4
+      with:
+        name: the file
+        path: package.json
     - name: Read file package.json
       run: cat package.json
+  second_job:
+    runs-on: ubuntu-latest
+    needs: first_job
+    steps:
+    - name: download the file
+      uses: actions/download-artifact@v5
+      with:
+        name: the file
+    - name: Check if package.json exists
+      run: file package.json
