--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: welcome message
       run: echo "My Message from GH Actions"
     - name: Upload package.json
-      uses: actions@upload-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: the file
         path: package.json
